// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeTextItem Basic rendering renders correctly with default props 1`] = `
<View
  style={
    {
      "backgroundColor": "#666666",
      "borderRadius": 10,
      "flexDirection": "row",
      "fontFamily": "Inter",
      "fontSize": 12,
      "fontStyle": "normal",
      "gap": 5,
      "justifyContent": "center",
      "paddingHorizontal": 10,
      "paddingVertical": 13.5,
      "width": 105,
    }
  }
>
  <Text
    style={
      {
        "color": "#cccccc",
        "fontWeight": 400,
      }
    }
  >
    #
    1
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#ffffff",
        "fontWeight": 500,
        "maxWidth": "70%",
      }
    }
  >
    testword
  </Text>
</View>
`;

exports[`BadgeTextItem Snapshot tests matches snapshot with hidden number 1`] = `
<View
  style={
    {
      "backgroundColor": "#666666",
      "borderRadius": 10,
      "flexDirection": "row",
      "fontFamily": "Inter",
      "fontSize": 12,
      "fontStyle": "normal",
      "gap": 5,
      "justifyContent": "center",
      "paddingHorizontal": 10,
      "paddingVertical": 13.5,
      "width": 105,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#ffffff",
        "fontWeight": 500,
        "maxWidth": "70%",
      }
    }
  >
    randomword
  </Text>
</View>
`;

exports[`BadgeTextItem Snapshot tests matches snapshot with long word 1`] = `
<View
  style={
    {
      "backgroundColor": "#666666",
      "borderRadius": 10,
      "flexDirection": "row",
      "fontFamily": "Inter",
      "fontSize": 12,
      "fontStyle": "normal",
      "gap": 5,
      "justifyContent": "center",
      "paddingHorizontal": 10,
      "paddingVertical": 13.5,
      "width": 105,
    }
  }
>
  <Text
    style={
      {
        "color": "#cccccc",
        "fontWeight": 400,
      }
    }
  >
    #
    1
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#ffffff",
        "fontWeight": 500,
        "maxWidth": "70%",
      }
    }
  >
    verylongwordthatshouldbetruncated
  </Text>
</View>
`;

exports[`BadgeTextItem Snapshot tests matches snapshot with visible number 1`] = `
<View
  style={
    {
      "backgroundColor": "#666666",
      "borderRadius": 10,
      "flexDirection": "row",
      "fontFamily": "Inter",
      "fontSize": 12,
      "fontStyle": "normal",
      "gap": 5,
      "justifyContent": "center",
      "paddingHorizontal": 10,
      "paddingVertical": 13.5,
      "width": 105,
    }
  }
>
  <Text
    style={
      {
        "color": "#cccccc",
        "fontWeight": 400,
      }
    }
  >
    #
    5
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#ffffff",
        "fontWeight": 500,
        "maxWidth": "70%",
      }
    }
  >
    example
  </Text>
</View>
`;
